# sqlalchemy-annotate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/fastapi_app/models/: __init__.py  post.py  profile.py  user.py
src/sqlalchemy_annotate/: __init__.py  __main__.py  cli.py  config.py  discovery.py  errors.py  formatter.py  models.py  parser.py  schema.py  writer.py
tests/: conftest.py  test_cli.py  test_config.py  test_discovery.py  test_formatter.py  test_schema.py  test_schema_extras.py  test_writer.py
