[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-annotate"
dynamic = ["version"]
description = "Rails annotate_models for modern SQLAlchemy 2.x + Alembic projects."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Abhinav Saxena", email = "abhinav061@gmail.com" }]
maintainers = [{ name = "Abhinav Saxena", email = "abhinav061@gmail.com" }]
keywords = ["sqlalchemy", "alembic", "annotate", "schema", "models", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
    "libcst>=1.1",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/abhinavs/sqlalchemy-annotate"
Repository = "https://github.com/abhinavs/sqlalchemy-annotate"
Changelog = "https://github.com/abhinavs/sqlalchemy-annotate/blob/main/CHANGELOG.md"
Issues = "https://github.com/abhinavs/sqlalchemy-annotate/issues"

[project.scripts]
sqlalchemy-annotate = "sqlalchemy_annotate.cli:app"

# Single-source the version from the package so the wheel and __version__
# can never drift apart.
[tool.hatch.version]
path = "src/sqlalchemy_annotate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlalchemy_annotate"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Reference configuration (this repo ships no models of its own, so `models`
# is intentionally omitted; see examples/fastapi_app for a runnable setup).
[tool.sqlalchemy-annotate]
include_indexes = true
include_foreign_keys = true
include_relationships = false
sort = "definition"
exclude = []
